feat: Introduce a new design system with a floating navigation bar, avatar upload functionality, and profile page updates.

--- a/PROJECT_REPORT.html
+++ b/PROJECT_REPORT.html
@@ -599,7 +599,7 @@
 
         <p style="text-align: center; margin-top: 40px; color: #666;">
             <strong>End of Report</strong><br>
-            Prepared by: [Your Name]<br>
+            Prepared by: IFTEYAJ<br>
             Date: December 14, 2025<br>
             EWU Lost & Found - Campus Item Recovery System
         </p>
